src/objects/zkmulti__Visibility_Suite__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Button_Text__c</fullName>
        <label>Button Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Button_Url__c</fullName>
        <label>Button Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Default_Upsell_Skyscraper__c</fullName>
        <label>Default Upsell Skyscraper</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zkmulti__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dynamics_Skyscraper_Image_URL_field__c</fullName>
        <label>Dynamics Skyscraper Image URL field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dynamics_Skyscraper_URL_field__c</fullName>
        <label>Dynamics Skyscraper URL field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Enable_Upsell_Skyscraper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Upsell Skyscraper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Footer_Text__c</fullName>
        <label>Footer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Javascript_Code__c</fullName>
        <label>Javascript Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Primary_Color__c</fullName>
        <label>Primary Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Public_URL__c</fullName>
        <label>Public URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Secondary_Color__c</fullName>
        <label>Secondary Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Show_Order_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Order Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Show_Travel_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Travel History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Skyscraper_Title__c</fullName>
        <label>Skyscraper Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Theme_Name__c</fullName>
        <label>Theme Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Branded Tracking</label>
    <nameField>
        <label>Visibility Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branded Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>